# linux-desktop-ai-chat

./: .env.example  .gitignore  .pre-commit-config.yaml  BUGFIX_CHANGELOG.md  DESIGN_TOKEN_SYSTEM_REPORT.md  FINAL_TEST_STATUS.md  GUI_COMPLETE_REVIEW_REPORT.md  ICON_CUTOVER_FINAL_REPORT.md  ICON_GUARD_REPORT.md  ICON_SET_GENERATION_REPORT.md  ICON_SYMBOLIC_SYSTEM_REPORT.md  LAYOUT_PILOT_REFACTOR_PHASE2_REPORT.md  LAYOUT_PILOT_REFACTOR_REPORT.md  LAYOUT_SPACING_AUDIT_REPORT.md  Makefile  README.md  SIDEBAR_IMPLEMENTATION.md  SIGNATURE_GUI_DIRECTION_REPORT.md  TEST_EXECUTION_REPORT.md  TEST_STABILITY_REPORT.md  THEME_MIGRATION_FINAL_REPORT.md  THEME_VISUALIZER_APP_INTEGRATION_REPORT.md  THEME_VISUALIZER_IMPLEMENTATION_REPORT.md  alembic.ini  app-tree.md  design_system.json  install-desktop.sh  linux-desktop-chat.desktop  main.py  pyproject.toml  pytest.ini  requirements.txt  run_gui_shell.py  run_qml_shell.py  run_workbench_demo.py  start.sh
examples/plugins/ldc_plugin_example/: README.md  pyproject.toml
examples/plugins/ldc_plugin_example/src/ldc_plugin_example/: __init__.py  feature_entry.py
linux-desktop-chat-cli/: .gitignore  MIGRATION_CUT_LIST.md  README.md  pyproject.toml
linux-desktop-chat-cli/src/app/cli/: context_replay.py  context_repro_registry_list.py
linux-desktop-chat-cli/tests/: test_basic_runtime.py  test_imports.py
linux-desktop-chat-features/: MIGRATION_CUT_LIST.md  README.md  pyproject.toml
linux-desktop-chat-features/src/app/features/: __init__.py  availability_types.py  builtins.py  compatibility.py  dependency_availability.py  dependency_packaging.py  edition_resolution.py  entry_point_contract.py  feature_discovery.py  feature_name_catalog.py  manifest_resolution.py  nav_binding.py  registrar.py  registry.py  release_matrix.py
linux-desktop-chat-features/src/app/features/dependency_groups/: __init__.py  builtins.py  models.py  registry.py
linux-desktop-chat-features/src/app/features/editions/: __init__.py  models.py  registry.py
linux-desktop-chat-features/tests/unit/: test_dependency_packaging.py  test_package_exports.py  test_release_matrix.py
linux-desktop-chat-infra/: .gitignore  MIGRATION_CUT_LIST.md  README.md  pyproject.toml
linux-desktop-chat-infra/src/app/debug/: agent_event.py  debug_store.py  emitter.py  event_bus.py  gui_log_buffer.py  qa_artifact_loader.py
linux-desktop-chat-infra/src/app/metrics/: __init__.py  metrics_collector.py
linux-desktop-chat-infra/src/app/tools/: web_search.py
linux-desktop-chat-infra/tests/: test_imports.py
linux-desktop-chat-persistence/: .gitignore  README.md  pyproject.toml
linux-desktop-chat-persistence/src/app/persistence/: __init__.py  session.py
linux-desktop-chat-persistence/src/app/persistence/orm/: models.py
linux-desktop-chat-projects/: .gitignore  README.md  pyproject.toml
linux-desktop-chat-projects/src/app/projects/: __init__.py  controlling.py  lifecycle.py  milestones.py  models.py  monitoring_display.py
linux-desktop-chat-projects/tests/: test_smoke_import.py
linux-desktop-chat-providers/: .gitignore  MIGRATION_CUT_LIST.md  README.md  pyproject.toml
linux-desktop-chat-providers/src/app/providers/: base_provider.py  orchestrator_provider_factory.py
linux-desktop-chat-providers/src/app/utils/: env_loader.py
linux-desktop-chat-providers/tests/: test_basic_runtime.py  test_imports.py
linux-desktop-chat-runtime/: MIGRATION_CUT_LIST.md  README.md  pyproject.toml
linux-desktop-chat-runtime/src/app/runtime/: __init__.py  lifecycle.py  model_invocation.py
linux-desktop-chat-runtime/tests/: test_imports.py
linux-desktop-chat-ui-contracts/: .gitignore  MIGRATION_CUT_LIST.md  README.md  pyproject.toml
linux-desktop-chat-ui-contracts/src/app/ui_contracts/: __init__.py
linux-desktop-chat-ui-contracts/src/app/ui_contracts/common/: __init__.py  enums.py  errors.py  events.py
linux-desktop-chat-ui-contracts/src/app/ui_contracts/workspaces/: __init__.py  agent_tasks_inspector.py  agent_tasks_registry.py  agent_tasks_runtime.py  agent_tasks_task_panel.py  chat.py  deployment_releases.py  deployment_rollouts.py  deployment_targets.py  model_usage_sidebar.py  projects_overview.py  prompt_studio_detail.py  prompt_studio_library.py  prompt_studio_list.py  prompt_studio_templates.py  prompt_studio_test_lab.py  prompt_studio_versions.py  prompt_studio_workspace.py  settings_advanced.py  settings_ai_model_catalog.py  settings_ai_models.py  settings_appearance.py  settings_data.py  settings_legacy_modal.py  settings_modal_ollama.py  settings_model_routing.py
linux-desktop-chat-ui-contracts/tests/unit/: test_package_exports.py  test_workspace_import_smoke.py
linux-desktop-chat-ui-runtime/: MIGRATION_CUT_LIST.md  README.md  pyproject.toml
linux-desktop-chat-ui-runtime/src/app/ui_runtime/: base_runtime.py  manifest_models.py  panel_wiring.py  theme_loader.py  theme_registry.py
linux-desktop-chat-ui-runtime/src/app/ui_runtime/qml/: __init__.py  domain_nav_model.py  qml_runtime.py  shell_bridge_facade.py  shell_navigation_state.py  shell_route_catalog.py
linux-desktop-chat-ui-runtime/src/app/ui_runtime/widgets/: widgets_runtime.py
linux-desktop-chat-ui-runtime/tests/: test_imports.py
linux-desktop-chat-ui-themes/: MIGRATION_CUT_LIST.md  README.md  pyproject.toml
linux-desktop-chat-ui-themes/src/app/ui_themes/: __init__.py
linux-desktop-chat-ui-themes/src/app/ui_themes/builtins/: README.md
linux-desktop-chat-ui-themes/tests/: test_imports.py
linux-desktop-chat-utils/: MIGRATION_CUT_LIST.md  README.md  pyproject.toml
linux-desktop-chat-utils/src/app/utils/: datetime_utils.py  env_loader.py  paths.py
linux-desktop-chat-utils/tests/: test_imports.py
linux-desktop-chat-workflows/: .gitignore  README.md  pyproject.toml
linux-desktop-chat-workflows/src/app/workflows/: __init__.py  butler_support_definitions.py  butler_support_tools.py  dev_assist_tools.py  status.py
linux-desktop-chat-workflows/src/app/workflows/models/: __init__.py  run.py  run_summary.py
linux-desktop-chat-workflows/src/app/workflows/persistence/: __init__.py  schedule_repository.py
(+2826 files in other folders)
