# PEP 621 — konsistent mit app.features.dependency_packaging (Drift-Check: validate_pep621_pyproject_alignment).
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-desktop-chat"
version = "0.1.0"
description = "Linux Desktop Chat — Desktop-Shell, Chat, Knowledge und zugehörige App-Module"
readme = "README.md"
requires-python = ">=3.10"
# Nur „core“-Dependency-Gruppe (siehe dependency_groups.builtins + CANONICAL_GROUP_POLICIES).
dependencies = [
  "PySide6>=6.5.0",
  "qasync>=0.27.0",
  "aiohttp>=3.9.0",
  "jsonschema>=4.19.0",
  "deepdiff>=6.0.0",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0.0",
  "alembic>=1.13.0",
]

# Extra-Keys = DependencyGroupDescriptor.name (keine zweite Namenswelt).
# „workflows“ bleibt kein pip-Extra (LOGICAL_MARKER im Packaging-Mapping).
[project.optional-dependencies]
rag = ["chromadb>=0.4.0"]
agents = []
ops = []
qml = []
governance = []
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-qt>=4.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
