# PEP 621 — konsistent mit app.features.dependency_packaging (Drift-Check: validate_pep621_pyproject_alignment).
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-desktop-chat"
version = "0.1.0"
description = "Linux Desktop Chat — Desktop-Shell, Chat, Knowledge und zugehörige App-Module"
readme = "README.md"
requires-python = ">=3.10"
# Nur „core“-Dependency-Gruppe (siehe dependency_groups.builtins + CANONICAL_GROUP_POLICIES).
# Feature-Plattform: eingebettete Vorlage ./linux-desktop-chat-features (Commit 2; später PyPI-Pin).
# UI-Verträge: eingebettete Vorlage ./linux-desktop-chat-ui-contracts (Commit 2 ui_contracts; später PyPI-Pin).
# Pipelines: eingebettete Vorlage ./linux-desktop-chat-pipelines (Commit 2 pipelines; später PyPI-Pin).
# Providers: eingebettete Vorlage ./linux-desktop-chat-providers (Commit 2 providers; später PyPI-Pin).
# CLI: eingebettete Vorlage ./linux-desktop-chat-cli (Welle 5; später PyPI-Pin).
dependencies = [
  "linux-desktop-chat-features @ file:./linux-desktop-chat-features",
  "linux-desktop-chat-ui-contracts @ file:./linux-desktop-chat-ui-contracts",
  "linux-desktop-chat-pipelines @ file:./linux-desktop-chat-pipelines",
  "linux-desktop-chat-providers @ file:./linux-desktop-chat-providers",
  "linux-desktop-chat-cli @ file:./linux-desktop-chat-cli",
  "PySide6>=6.5.0",
  "qasync>=0.27.0",
  "aiohttp>=3.9.0",
  "jsonschema>=4.19.0",
  "deepdiff>=6.0.0",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0.0",
  "alembic>=1.13.0",
]

# Extra-Keys = DependencyGroupDescriptor.name (keine zweite Namenswelt).
# „workflows“ bleibt kein pip-Extra (LOGICAL_MARKER im Packaging-Mapping).
[project.optional-dependencies]
rag = ["chromadb>=0.4.0"]
agents = []
ops = []
qml = []
governance = []
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-qt>=4.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
