# Distribution: linux-desktop-chat-cli
# Python-Import: app.cli (Variante B — gleicher Pfad wie im Host-Monorepo)
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-desktop-chat-cli"
version = "0.1.0"
description = "Headless CLI tools for Linux Desktop Chat (import path: app.cli)"
readme = "README.md"
requires-python = ">=3.10"
# Laufzeit: CLI-Module importieren app.context.* — nur sinnvoll neben Host linux-desktop-chat.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
