# Distribution: linux-desktop-chat-persistence
# Python-Import: app.persistence (Variante B — gleicher Pfad wie im Host-Monorepo)
# Scaffold: volle Quelle folgt beim physischen Cut aus app/persistence/.
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-desktop-chat-persistence"
version = "0.1.0"
description = "SQLAlchemy persistence layer for Linux Desktop Chat (import path: app.persistence)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "SQLAlchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "build>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
