# Distribution: linux-desktop-chat-providers
# Python-Import: app.providers (Variante B — gleicher Pfad wie im Host-Monorepo)
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-desktop-chat-providers"
version = "0.1.0"
description = "Ollama chat providers for Linux Desktop Chat (import path: app.providers)"
readme = "README.md"
requires-python = ">=3.10"
# app.utils kommt aus linux-desktop-chat-utils; bewusst keine file:-Abhängigkeit hier:
# pip wertet relative file:-URLs gegen das *aktuelle Arbeitsverzeichnis* aus — von
# Repo-Root bricht z. B. file:../… (siehe README: Host bindet beides; isoliert: utils zuerst).
dependencies = [
  "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "build>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
asyncio_mode = "auto"
