# Distribution: linux-desktop-chat-runtime
# Python-Import: app.runtime, app.extensions (Variante B)
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-desktop-chat-runtime"
version = "0.1.0"
description = "Product lifecycle hooks and runtime DTOs for Linux Desktop Chat (import paths: app.runtime, app.extensions)"
readme = "README.md"
requires-python = ">=3.10"
# Shutdown-Pfad importiert app.metrics / app.services lazy — vollständiges Produkt über Host.
# Keine file:-Abhängigkeit auf linux-desktop-chat-infra (pip/CWD; Host bindet alles).
dependencies = [
  "PySide6>=6.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
