# Distribution: linux-desktop-chat-ui-contracts
# Python-Import: app.ui_contracts (Variante B — gleicher Pfad wie im Host-Monorepo)
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-desktop-chat-ui-contracts"
version = "0.1.0"
description = "Qt-free UI contracts for Linux Desktop Chat (import path: app.ui_contracts)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "build>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
