# Distribution: linux-desktop-chat-ui-runtime
# Python-Import: app.ui_runtime (Variante B — gleicher Pfad wie im Host-Monorepo)
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-desktop-chat-ui-runtime"
version = "0.1.0"
description = "QML/widgets UI runtime for Linux Desktop Chat (import path: app.ui_runtime)"
readme = "README.md"
requires-python = ">=3.10"
# Keine file:-Abhängigkeit auf ui_contracts (pip/CWD bei verschachtelten Pfaden) — Host bindet
# linux-desktop-chat-ui-contracts + dieses Paket; isoliert: README.
dependencies = [
  "jsonschema>=4.19.0",
  "PySide6>=6.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-qt>=4.2.0",
  "build>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
