# Distribution: linux-desktop-chat-workflows
# Python-Import: app.workflows (Variante B — gleicher Pfad wie im Host-Monorepo)
# Scaffold: volle Quelle folgt beim physischen Cut aus app/workflows/.
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-desktop-chat-workflows"
version = "0.1.0"
description = "Workflow DAGs and execution for Linux Desktop Chat (import path: app.workflows)"
readme = "README.md"
requires-python = ">=3.10"
# app.pipelines kommt über den Host (linux-desktop-chat-pipelines @ file:./…).
# Kein zweites file:-URL hier: pip würde sonst zwei direkte Referenzen auf
# dieselbe Distribution als inkonfliktlösbar melden.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "build>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
